k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
  # namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
    # - image: dockersamples/examplevotingapp_result:before
      - image: acrdemo2306.azurecr.io/examplevotingapp_result
        name: result
        ports:
        - containerPort: 80
          name: result
