k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
    # - image: dockersamples/examplevotingapp_vote:before
      - image: acrdemo2306.azurecr.io/examplevotingapp_vote
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 80
          name: vote
      imagePullSecrets:
        - name: votingappauth
