k8s-specifications/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
  # namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
    # - image: dockersamples/examplevotingapp_worker
      - image: acrdemo2306.azurecr.io/examplevotingapp_worker
        name: worker
