k8s-specifications/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - name: "db-service"
    port: 80 # 5432
    targetPort: 5432
  selector:
    app: db
