k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
  # namespace: vote
spec:
  type: ClusterIP # was LoadBalancer
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 80
  selector:
    app: vote
