k8s-specifications/ingress-with-externaldns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: vote.kocaboy.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: result.kocaboy.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
  tls:
  - hosts:
    - vote.kocaboy.online
    secretName: vote-kocaboy-secret           
  - hosts:
    - result.kocaboy.online
    secretName: result-kocaboy-secret
